<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="30sp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp" />
        <EditText
            android:id="@+id/gameNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/game_name"
            android:layout_margin="3dp"
            />

        <EditText
            android:id="@+id/producerNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/producer_name"
            android:layout_margin="3dp"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameTypeSpinner"
            android:entries="@array/game_genre"
            android:padding="5dp"
            android:layout_margin="3dp"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxMultiplayer"
            android:text="@string/multiplayer_compatible"
            android:padding="15dp"
            android:layout_margin="10dp"
            android:onClick="onCheckBoxClicked"
            />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:stepSize="1"
            android:numStars="5"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/submit_rating"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/submitButton"
            android:onClick="buttonClick"
            />

    </LinearLayout>
</ScrollView>